<resources>
    <string name="app_name">种愿</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="image_desc">image_desc</string>
    <string name="str_create_newuser">创建新帐号</string>
    <string name="str_login_1">登 录</string>
    <string name="str_input_phone">请输入手机号</string>
    <string name="str_get_phonecode">获取验证码</string>
    <string name="str_input_phonecode">请输入验证码</string>
    <string name="str_hint_pass">请输入密码</string>
    <string name="str_forget_pass">忘记密码</string>
    <string name="str_forward">转发</string>
    <string name="str_comment">评论</string>
    <string name="str_zambia">赞</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="send">send</string>
    <string name="receive">receive</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="prompt">提示</string>
    <string name="exit_app">升级成功</string>
    <string name="str_at">"@"</string>
    <string name="jmui_action_settings">Settings</string>
    <string name="jmui_about">关于</string>
    <string name="jmui_send">发送</string>
    <string name="jmui_chat">聊天</string>
    <string name="jmui_single_chat">单聊</string>
    <string name="jmui_group_chat">群聊</string>
    <string name="jmui_picture">图片</string>
    <string name="jmui_take_photo">拍照</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">位置</string>
    <string name="jmui_business_card">名片</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="jmui_file_fetch_failed">文件获取失败</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_confirm">确定</string>
    <string name="jmui_resend_message_hint">确定重发消息?</string>
    <string name="jmui_cancel">取消</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_delete">删除</string>
    <string name="jmui_loading">加载中</string>
    <string name="jmui_username">用户名</string>
    <string name="jmui_registering">注册中</string>
    <string name="jmui_register_success">注册成功</string>
    <string name="jmui_login">登录</string>
    <string name="jmui_logging">登录中</string>
    <string name="jmui_login_success">登录成功</string>
    <string name="jmui_record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_file_not_found_toast">文件丢失</string>
    <string name="jmui_camera_not_prepared">摄像头尚未准备好</string>
    <string name="jmui_about_content">简单的聊天demo, 可以发文字, 语音及拍照发送图片.
        jmessage—sdk版本为1.2.1</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="jmui_user_logout_dialog_title">下线提示</string>
    <string name="jmui_user_logout_dialog_message">您的账号已经在另一台设备上登录，您被迫下线</string>
    <string name="jmui_server_abnormal_toast">服务器返回异常，请重试</string>
    <string name="jmui_connect_failed_toast">连接服务器失败，请稍后重试</string>
    <string name="jmui_server_return_error_toast">服务器返回格式错误</string>
    <string name="jmui_unknown_error_toast">未知错误</string>
    <string name="jmui_system_error_toast">系统内部错误，请稍候重试</string>
    <string name="jmui_parameter_illegal">参数值不合法</string>
    <string name="jmui_server_800002">AppKey信息为空</string>
    <string name="jmui_server_800003">AppKey未注册</string>
    <string name="jmui_server_800004">用户ID为空</string>
    <string name="jmui_server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="jmui_server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="jmui_server_800012">请重新登录</string>
    <string name="jmui_server_800013">您的账号已登出，请重新登录</string>
    <string name="jmui_server_801003">用户名不存在</string>
    <string name="jmui_server_802001">用户名为空</string>
    <string name="jmui_server_801004">密码错误</string>
    <string name="jmui_server_803001">发送消息失败，状态存储异常</string>
    <string name="jmui_server_803002">发送消息失败，系统网络异常</string>
    <string name="jmui_server_803003">发送失败，目标用户未注册或不存在</string>
    <string name="jmui_server_803004">发送失败，此群已被删除</string>
    <string name="jmui_server_803005">您已被请出此群，不能发送消息</string>
    <string name="jmui_server_803008">消息已发出，但被对方拒收了。</string>
    <string name="jmui_server_808003">讨论组数量已达上限，创建失败</string>
    <string name="jmui_server_808004">群组名长度超出上限</string>
    <string name="jmui_server_810003">用户不属于该群组</string>
    <string name="jmui_server_810005">要添加的用户尚未注册</string>
    <string name="jmui_server_810007">用户已存在</string>
    <string name="jmui_server_810008">讨论组的成员数量已达上限，添加失败</string>
    <string name="jmui_server_810009">该用户拥有的讨论组数量已达上限，添加失败</string>
    <string name="jmui_server_811003">用户不在该讨论组中，删除成员失败</string>
    <string name="jmui_server_812002">您已被请出此群，不能修改相关信息</string>
    <string name="jmui_server_818001">要添加的黑名单列表为空，添加失败</string>
    <string name="jmui_server_818002">要添加的黑名单列表中有成员不存在，添加失败</string>
    <string name="jmui_server_818003">要添加的黑名单列表中有成员不能被添加，添加失败</string>
    <string name="jmui_server_818004">要添加的黑名单列表中有成员重复添加，添加失败</string>
    <string name="jmui_sdk_http_899001">用户已存在</string>
    <string name="jmui_sdk_http_899006">该群已被删除</string>
    <string name="jmui_sdk_http_898005">uid不存在</string>
    <string name="jmui_sdk_http_898006">此群已被删除</string>
    <string name="jmui_sdk_http_898008">校验失败</string>
    <string name="jmui_sdk_http_898009">APPKey不存在</string>
    <string name="jmui_sdk_http_898010">请求失败，请稍候重试</string>
    <string name="jmui_sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="jmui_sdk_87x_871104">服务器返回错误</string>
    <string name="jmui_sdk_87x_871303">用户名需以数字或字母开头，长度在4-128个字节之间，且不能带_ @ -以外的字符</string>
    <string name="jmui_sdk_87x_871304">密码长度要在4-128个字节之间</string>
    <string name="jmui_sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="jmui_sdk_87x_871309">消息所含文件不存在</string>
    <string name="jmui_sdk_87x_871310">网络已断开，请检查网络连接</string>
    <string name="jmui_sdk_87x_871311">用户未设定头像，下载头像失败</string>
    <string name="jmui_sdk_87x_871312">ImageContent创建失败</string>
    <string name="jmui_sdk_87x_871403">第三方上传失败，请稍后重试</string>
    <string name="jmui_sdk_87x_871404">下载失败，请稍后重试</string>
    <string name="jmui_sdk_87x_871501">appkey与appid不匹配或者token无效</string>
    <string name="jmui_sdk_87x_871502">appkey无效</string>
    <string name="jmui_sdk_87x_871503">appkey与platform不匹配</string>
    <string name="jmui_sdk_87x_871504">push注册还未完成，请稍后重试</string>
    <string name="jmui_sdk_87x_871505">包名不存在</string>
    <string name="jmui_sdk_87x_871506">imei无效</string>
    <string name="jmui_sdk_87x_871201">请求超时，请检查您的网络</string>
    <string name="change_password">修改密码</string>
    <string name="user_logout_dialog_title">下线提示</string>
    <string name="user_logout_dialog_message">您的账号已经在另一台设备上登录，您被迫下线</string>
    <string name="user_delete_hint_message">您的账号已被删除，您被迫下线</string>
    <string name="change_password_message">您的密码已被修改，请重新登录</string>
    <string name="server_abnormal_toast">服务器返回异常，请重试</string>
    <string name="connect_failed_toast">连接服务器失败，请稍后重试</string>
    <string name="server_return_error_toast">服务器返回格式错误</string>
    <string name="unknown_error_toast">未知错误</string>
    <string name="system_error_toast">系统内部错误，请稍候重试</string>
    <string name="parameter_illegal">参数值不合法</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="choose_album_title">选择相册</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">查看原图</string>
    <string name="origin_picture">原图</string>
    <string name="combine_title">(%s)</string>
    <string name="sending_hint">正在发送</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="chat_detail_title">聊天详情</string>
    <string name="all_group_members">全部群成员</string>
    <string name="chat_detail_add">添加</string>
    <string name="unnamed">未命名</string>
    <string name="search">搜索...</string>
    <string name="add">添加</string>
    <string name="deleting_hint">删除中</string>
    <string name="group_exit_btn">删除并退出</string>
    <string name="crop_image_title">裁剪头像</string>
    <string name="add_friend_to_group_title">添加好友到群组</string>
    <string name="searching_user">正在查找</string>
    <string name="adding_hint">正在添加</string>
    <string name="modifying_hint">正在修改</string>
    <string name="adding_group_member_hint">正在增加群成员</string>
    <string name="deleting_group_member_hint">正在删除群成员</string>
    <string name="jmui_delete_member_confirm_hint">确定删除此成员？</string>
    <string name="jmui_delete_confirm_hint">确定删除？</string>
    <string name="join_group_toast">加入了群聊</string>
    <string name="exiting_group_toast">正在退出</string>
    <string name="deleted_by_creator">你被请出了群聊</string>
    <string name="delete_group_by_creator">群主解散了此群</string>
    <string name="exit_group_by_creator">被请出了群聊</string>
    <string name="exit_group_event">退出了群聊</string>
    <string name="group_people_num_hit">群人数上限</string>
    <string name="group_my_name_hit">我在本群昵称</string>
    <string name="change_nickname_hint">修改此昵称只会在本群中显示</string>
    <string name="group_chat_history_hit">查找聊天内容</string>
    <string name="group_clear_history_hit">清空聊天记录</string>
    <string name="jmui_clear_history_confirm_title">确定清空聊天记录？</string>
    <string name="jmui_delete_group_confirm_title">确定删除并退出群聊？</string>
    <string name="added">已添加</string>
    <string name="friend_request_title">新朋友</string>
    <string name="friend_info">好友信息</string>
    <string name="group">群聊</string>
    <string name="chat_peoples_num">目前已有1名参与人</string>
    <string name="members_in_chat">聊天成员</string>
    <string name="group_name_hit">群名称</string>
    <string name="group_name_not_null_toast">名称不能为空</string>
    <string name="selected_num">(%s)</string>
    <string name="set_do_not_disturb">消息免打扰</string>
</resources>