<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_members_bg_color"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/top_comright" />

    <RelativeLayout
        android:id="@+id/title_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/jmui_jpush_blue"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/return_btn"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/jmui_back_btn_bg"
            android:src="@drawable/jmui_back_btn" />

        <TextView
            android:id="@+id/members_in_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/return_btn"
            android:text="@string/members_in_chat"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/members_in_chat"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/send_picture_btn_bg"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/search_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/default_input_bg"
            android:hint="@string/search"
            android:paddingLeft="5dp"
            android:textColor="#555555"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/jmui_text_cursor_bg" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#d4d4d4"
            android:src="@drawable/search" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/jmui_chat_detail_split_line_color" />

    <ListView
        android:id="@+id/members_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null">

    </ListView>

</LinearLayout>