<?xml version="1.0" encoding="utf-8"?>
<com.hopeofseed.hopeofseed.ui.view.ChatDetailView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chat_detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbgcolor">
    <include
        layout="@layout/menu_title_bar"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/chat_detail_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <include
                android:id="@+id/top"
                layout="@layout/top_comright"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff">

                <com.hopeofseed.hopeofseed.ui.CircleImageView
                    android:id="@+id/img_user_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:background="#ffffff"
                    android:src="@drawable/default_avater" />

                <LinearLayout
                    android:id="@+id/group_name_ll"
                    style="@style/ChatDetailItem"
                    android:layout_toRightOf="@+id/img_user_avatar">

                    <TextView
                        android:id="@+id/chat_detail_group_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="left|center"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/arrow_iv"
                        style="@style/ChatDetailArrow" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/ChatDetailItemHit"
                    android:text="群地点" />

                <Button
                    android:id="@+id/chat_detail_group_address"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15sp"
                    android:layout_toRightOf="@+id/tv_address"
                    android:background="@null"
                    android:gravity="right|center"
                    android:text="选择省市区"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#ffffff"
                android:id="@+id/rel_desc"
                android:minHeight="50dp">

                <TextView
                    android:id="@+id/tv_desc_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="群简介"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/chat_detail_group_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_desc_title"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="left|center"
                    android:text="介绍一下这个群"
                    android:textSize="15sp" />
            </RelativeLayout>

            <com.hopeofseed.hopeofseed.ui.view.GroupGridView
                android:id="@+id/chat_detail_group_gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:horizontalSpacing="10dp"
                android:numColumns="4"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp" />

            <View
                android:id="@+id/all_member_split_line1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/jmui_chat_detail_split_line_color" />

            <LinearLayout
                android:id="@+id/all_member_ll"
                style="@style/ChatDetailItem">

                <TextView
                    android:id="@+id/members_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/selected_num"
                    android:textColor="@color/chat_detail_item_hit_color"
                    android:textSize="@dimen/text_medium_size" />

            </LinearLayout>

            <View
                android:id="@+id/all_member_split_line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jmui_chat_detail_split_line_color" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jmui_chat_detail_split_line_color" />

            <RelativeLayout
                android:id="@+id/no_disturb_rl"
                style="@style/ChatDetailItem">

                <TextView
                    style="@style/ChatDetailItemHit"
                    android:text="@string/set_do_not_disturb" />

                <com.hopeofseed.hopeofseed.ui.view.SlipButton
                    android:id="@+id/no_disturb_slip_btn"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jmui_chat_detail_split_line_color" />

            <LinearLayout
                android:id="@+id/group_num_ll"
                style="@style/ChatDetailItem"
                android:visibility="gone">

                <TextView
                    style="@style/ChatDetailItemHit"
                    android:text="@string/group_people_num_hit" />

                <TextView
                    android:id="@+id/chat_detail_group_num"
                    style="@style/ChatDetailItemContent" />

                <ImageView style="@style/ChatDetailArrow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jmui_chat_detail_split_line_color"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/group_my_name_ll"
                style="@style/ChatDetailItem"
                android:visibility="gone">

                <TextView
                    style="@style/ChatDetailItemHit"
                    android:text="@string/group_my_name_hit" />

                <TextView
                    android:id="@+id/chat_detail_my_name"
                    style="@style/ChatDetailItemContent" />

                <ImageView style="@style/ChatDetailArrow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jmui_chat_detail_split_line_color"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/group_chat_record_ll"
                style="@style/ChatDetailItem"
                android:visibility="gone">

                <TextView
                    style="@style/ChatDetailItemHit"
                    android:text="@string/group_chat_history_hit" />

                <TextView style="@style/ChatDetailItemContent" />

                <ImageView style="@style/ChatDetailArrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/group_chat_del_ll"
                style="@style/ChatDetailItem">

                <TextView
                    style="@style/ChatDetailItemHit"
                    android:text="@string/group_clear_history_hit" />

                <TextView style="@style/ChatDetailItemContent" />

                <ImageView style="@style/ChatDetailArrow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jmui_chat_detail_split_line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/chat_detail_del_group"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/chat_detail_btn_bg"
                    android:text="@string/group_exit_btn"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</com.hopeofseed.hopeofseed.ui.view.ChatDetailView>